fixed flex wrap on recipe box page

--- a/frontend/src/components/RecipeBox/RecipeBox.css
+++ b/frontend/src/components/RecipeBox/RecipeBox.css
@@ -74,7 +74,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr)); /* Use auto-fit to adjust the number of columns */
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
     gap: 10px;
 }
 
@@ -84,3 +84,7 @@
     width: 100%;
     object-fit: cover;
 }
+
+/* #about-us-container {
+
+} */
